--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,13 @@
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
     <application
+        android:name=".TitirifyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FluteDogActivity"
+        <activity android:name=".activities.FluteDogActivity"
             android:screenOrientation="portrait">
 
             <intent-filter>
